Updated with promothesus and grafana  monitoring

--- a/IT_ASSETMANAGEMENT_MICROSERVICES/k8s/asset-service/deployment.yaml
+++ b/IT_ASSETMANAGEMENT_MICROSERVICES/k8s/asset-service/deployment.yaml
@@ -11,6 +11,9 @@ spec:
     metadata:
       labels:
         app: asset-service
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "5102"
     spec:
       containers:
         - name: asset-service
