--- a/IT_ASSETMANAGEMENT_MICROSERVICES/k8s/auth-service/deployment.yaml
+++ b/IT_ASSETMANAGEMENT_MICROSERVICES/k8s/auth-service/deployment.yaml
@@ -11,6 +11,9 @@ spec:
     metadata:
       labels:
         app: auth-service
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "5101"
     spec:
       containers:
         - name: auth-service
