--- a/IT_ASSETMANAGEMENT_MICROSERVICES/k8s/user-service/deployment.yaml
+++ b/IT_ASSETMANAGEMENT_MICROSERVICES/k8s/user-service/deployment.yaml
@@ -11,6 +11,9 @@ spec:
     metadata:
       labels:
         app: user-service
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "5103"
     spec:
       containers:
         - name: user-service
